# code_runner

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
tests/: CMakeLists.txt  test.cpp
